layout issue

--- a/index.scss
+++ b/index.scss
@@ -320,8 +320,8 @@ body {
       #ytvideos { 
         display: grid;
         grid-template-columns: 1fr 1fr;
-        width: 85%;
-        margin: 4em auto 4em auto;
+        width: 95%;
+        margin: 4em auto 2em auto;
       }
       footer { 
         position: absolute;
@@ -387,7 +387,7 @@ body {
 }
 
 //Tablet Responsive Code
-@media only screen and (min-device-width : 768px) and (max-device-width : 1334px) { 
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) { 
 
   body { 
       main { 
@@ -467,8 +467,9 @@ body {
           }
           #ytvideos { 
             display: block;
-            width: 90%;
-            margin: 2em auto 4em auto;
+            width: 100%;
+            margin: 2em auto 0em auto;
+            gap: 4em;
             margin: 0 auto;
               iframe { 
                 width: 80%;
